# Renzo

./: README.md  file.py  htmlTags.json  inspector.py  main.py  network.py  pyproject.toml  tagSearch.py  test.html
src/renzo/: file.py  inspector.py  main.py  network.py  setup.py  tagSearch.py
src/renzo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
